--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,18 @@ PyYAML==6.0
 pymongo==4.3.3
 python-dotenv==0.21.0
 pydub==0.25.1
+matplotlib==3.3.3
+pandas==1.2.0
+Pillow==8.1.0
+pluggy==0.8.1
+py==1.7.0
+pyparsing==2.3.1
+python-dateutil==2.8.0
+pytz==2018.9
+rope==0.18.0
+six==1.12.0
+urllib3==1.24.1
+wrapt==1.12.1
+xlrd==2.0.1
+zope.interface==5.1.0
+pykrx
